[package]
name = "fubura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
text_io = "0.1.12"
aws-sdk-config = "1.32.0"
aws-sdk-scheduler = "1.32.0"
aws-sdk-sfn = "1.32.0"
rsjsonnet-front = "0.1.1"
rsjsonnet-lang = "0.1.1"
similar = "2.5.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.117"
