[package]
name = "fubura"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
text_io = "0.1.12"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-scheduler = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1", features = ["behavior-version-latest"] }
rsjsonnet-front = "0.1.1"
rsjsonnet-lang = "0.1.1"
similar = "2.5.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.117"
mockall = "0.12.1"
similar-asserts = "1.5.0"
aws-sdk-sts = "1.34.0"
console = "0.15.8"
aws-smithy-runtime-api = "1.7.1"
aws-smithy-types = "1.2.0"
anyhow = "1.0.86"
