[package]
name = "fubura"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
text_io = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-scheduler = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1", features = ["behavior-version-latest"] }
rsjsonnet-front = "0.3"
rsjsonnet-lang = "0.3"
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mockall = "0.13"
similar-asserts = "1"
aws-sdk-sts = "1"
console = "0.15"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
